k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: micewriter-sandbox
  namespace: micewriter-sandbox
spec:
  selector:
    app: micewriter-sandbox
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: LoadBalancer
