k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micewriter-sandbox
  namespace: micewriter-sandbox
spec:
  rules:
    - host: k8s-node-1.local
      http:
        paths:
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: micewriter-sandbox
                port:
                  number: 80
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: micewriter-sandbox
                port:
                  number: 80
          - path: /loadtest
            pathType: Prefix
            backend:
              service:
                name: micewriter-sandbox
                port:
                  number: 80
